// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cache loader stats should write .cache-loader directory 1`] = `"~/.cache-loader/5bd0ba927047320340aa12db6cc31885.json"`;

exports[`Test cache loader stats should write .cache-loader directory 2`] = `
Object {
  "data": Object {
    "contextDependencies": Array [],
    "dependencies": Array [
      Object {
        "mtime": 1540551795889,
        "path": "~/test/__fixtures__/entry_1.js",
      },
      Object {
        "mtime": 1540552501164,
        "path": "~/src/index.js",
      },
    ],
    "remainingRequest": "~/test/__fixtures__/entry_1.js",
  },
  "key": "~/.cache-loader/5bd0ba927047320340aa12db6cc31885.json",
}
`;

exports[`Test cache loader stats should write .cache-loader directory 3`] = `"~/.cache-loader/56d3e767af28dc88c1712d6bf21c90fb.json"`;

exports[`Test cache loader stats should write .cache-loader directory 4`] = `
Object {
  "data": Object {
    "contextDependencies": Array [],
    "dependencies": Array [
      Object {
        "mtime": 1540551809247,
        "path": "~/test/__fixtures__/entry_1_import.js",
      },
      Object {
        "mtime": 1540552501164,
        "path": "~/src/index.js",
      },
    ],
    "remainingRequest": "~/test/__fixtures__/entry_1_import.js",
  },
  "key": "~/.cache-loader/56d3e767af28dc88c1712d6bf21c90fb.json",
}
`;
